# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.82"                                   # error handling
bytes = "1.6.0"                                     # helps manage buffers
thiserror = "1.0.59"                                # error handling
tokio = { version = "1.37.0", features = ["full"] } # async networking

atoi = "2.0.0"
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
